--- a/src/main/java/test/simple.properties
+++ b/src/main/java/test/simple.properties
@@ -1,9 +1,24 @@
 
-region.name=simple_region_1
-region.key_generator=default
-region.provider=default
-region.cache.type=Redis
-region.cache.expiration_time=30
-region.cache.auto_update=true
+region1.key_generator=
+region1.provider=
+region1.cache_type=
+region1.redis_host=
+region1.redis_port=
+region1.expiration_time=
+region1.auto_update=
 
-#region.name=simple_region_1
+region2.key_generator=
+region2.provider=
+region2.cache_type=
+region2.redis-host=
+region2.redis-port=
+region2.expiration-time=
+region2.auto-update=
+
+region3.key_generator=
+region3.provider=
+region3.cache_type=
+region3.redis-host=
+region3.redis-port=
+region3.expiration-time=
+region3.auto-update=
