--- a/src/main/java/test/simple.properties
+++ b/src/main/java/test/simple.properties
@@ -1,24 +1,16 @@
 
-region1.key_generator=
-region1.provider=
-region1.cache_type=
-region1.redis_host=
-region1.redis_port=
-region1.expiration_time=
-region1.auto_update=
+region1.key_generator=default
+region1.provider=default
+region1.cache_type=redis
+region1.redis_host=localhost
+region1.redis_port=1001
+region1.expiration_time=30
+region1.auto_update=40
 
-region2.key_generator=
-region2.provider=
-region2.cache_type=
-region2.redis-host=
-region2.redis-port=
-region2.expiration-time=
-region2.auto-update=
-
-region3.key_generator=
-region3.provider=
-region3.cache_type=
-region3.redis-host=
-region3.redis-port=
-region3.expiration-time=
-region3.auto-update=
+region2.key_generator=default
+region2.provider=default
+region2.cache_type=localhost
+region2.redis-host=localhost
+region2.redis-port=8080
+region2.expiration-time=50
+region2.auto-update=10
