-- configuration parser complete

--- a/src/main/java/test/simple.properties
+++ b/src/main/java/test/simple.properties
@@ -1,16 +1,15 @@
 
-region1.key_generator=default
-region1.provider=default
-region1.cache_type=redis
+region1.provider=test.CustomerProvider
+region1.cache_type=Custom
 region1.redis_host=localhost
 region1.redis_port=1001
 region1.expiration_time=30
-region1.auto_update=40
+region1.auto_update=true
 
-region2.key_generator=default
-region2.provider=default
-region2.cache_type=localhost
-region2.redis-host=localhost
-region2.redis-port=8080
-region2.expiration-time=50
-region2.auto-update=10
+#region2.key_generator=default
+#region2.provider=default
+#region2.cache_type=ConcurrentHashMap
+#region2.redis-host=localhost
+#region2.redis-port=8080
+#region2.expiration-time=50
+#region2.auto-update=false
