-- config parser for redis configuration, redis connection pool setup

--- a/src/main/java/test/simple.properties
+++ b/src/main/java/test/simple.properties
@@ -3,6 +3,7 @@ region1.provider=test.CustomerProvider
 region1.cache_type=Custom
 region1.redis_host=localhost
 region1.redis_port=1001
+region1.redis_connections=10
 region1.expiration_time=30
 region1.auto_update=true
 
