--- a/src/main/java/test/test1/app.properties
+++ b/src/main/java/test/test1/app.properties
@@ -1,5 +1,5 @@
 
+region1.cache_type=Redis
 
-region1.cache_type=Custom
-region1.expiration_time=30
-region1.auto_update=true
+region2.default_config=true
+#region2.provivier=core.specification.impl.basic.BasicProviderImpl
